--- a/Transfer.Web/Views/Carrier/Save.cshtml
+++ b/Transfer.Web/Views/Carrier/Save.cshtml
@@ -104,7 +104,7 @@
         <div class="t-col col-3 form-group">
             <div class="input-group input-group-icon">
                 <i class="fas fa-pencil-alt input-group-text"></i>
-                <input asp-for="Inn" class="form-control" placeholder="ИНН Банка" />
+                <input asp-for="BankInn" class="form-control" placeholder="ИНН Банка" />
             </div>
         </div>
         <div class="t-col col-3 form-group">
