--- a/Transfer.Web/Views/Carrier/Save.cshtml
+++ b/Transfer.Web/Views/Carrier/Save.cshtml
@@ -1,32 +1,56 @@
 ﻿@model Transfer.Bl.Dto.Carrier.CarrierDto
 
-@Html.AntiForgeryToken();
+@Html.AntiForgeryToken()
 @Html.HiddenFor(x => x.Id)
-@Html.HiddenFor(x => x.City)
 
 <div class="container the-form">
     <div class="row blank-row"></div>
     <div class="row form-row">
-        <div class="t-col col-11 form-group">
-            <div class="input-group input-group-icon">
-                <i class="fas fa-pencil-alt input-group-text"></i>
-                <input asp-for="Name" class="form-control" placeholder="Краткое наименование компании" />
+        <div class="t-col col-12 col-md-6">
+            <div class="row">
+                <div class="t-col col-12 white-text">
+                    Краткое наименование компании: <span class="red-text">*</span>
+                </div>
+            </div>
+            <div class="row">
+                <div class="t-col col-12 form-group">
+                    <div class="input-group input-group-icon">
+                        <i class="fas fa-pencil-alt input-group-text"></i>
+                        <input asp-for="Name" class="form-control" />
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="col-1 t-col">
-            <i class="far fa-question-circle fa-lg"></i>
+        <div class="t-col col-12 col-md-6">
+            <div class="row">
+                <div class="t-col col-12 white-text">
+                    Город: <span class="red-text">*</span>
+                </div>
+            </div>
+            <div class="row">
+                <div class="t-col col-12 form-group">
+                    <div class="input-group input-group-icon">
+                        <i class="fas fa-pencil-alt input-group-text"></i>
+                        <input asp-for="City" class="form-control" />
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+    <div class="row form-row">
+    </div>
+    <div class="row form-row">
+        <div class="t-col col-12 white-text">
+            Полное наименование компании в соответствии с уставом: <span class="red-text">*</span>
         </div>
     </div>
-    <div class="row blank-row"></div>
     <div class="row form-row">
-        <div class="t-col col-11 form-group">
+        <div class="t-col col-12 form-group">
             <div class="input-group input-group-icon">
                 <i class="fas fa-pencil-alt input-group-text"></i>
                 <input asp-for="FullName" class="form-control" placeholder="Полное наименование компании в соответствии с уставом" />
             </div>
-        </div>
-        <div class="col-1 t-col">
-            <i class="far fa-question-circle fa-lg"></i>
         </div>
     </div>
     <div class="row blank-row"></div>
@@ -53,30 +77,58 @@
             <i class="far fa-question-circle fa-lg"></i>
         </div>
     </div>
-    <div class="row blank-row"></div>
     <div class="row form-row">
         <div class="t-col col-3 form-group">
-            <div class="input-group input-group-icon">
-                <i class="fas fa-pencil-alt input-group-text"></i>
-                <input asp-for="Phone" class="form-control" placeholder="Телефон" />
+            <div class="row">
+                <div class="col-12 white-text">
+                    Телефон: <span class="red-text">*</span>
+                </div>
+                <div class="col-12">
+                    <div class="input-group input-group-icon">
+                        <i class="fas fa-pencil-alt input-group-text"></i>
+                        <input type="tel" asp-for="Phone" class="form-control" />
+                    </div>
+                </div>
             </div>
         </div>
         <div class="t-col col-3 form-group">
-            <div class="input-group input-group-icon">
-                <i class="fas fa-pencil-alt input-group-text"></i>
-                <input asp-for="Email" class="form-control" placeholder="Email" />
+            <div class="row">
+                <div class="col-12 white-text">
+                    Email: <span class="red-text">*</span>
+                </div>
+                <div class="col-12">
+                    <div class="input-group input-group-icon">
+                        <i class="fas fa-pencil-alt input-group-text"></i>
+                        <input type="email" asp-for="Email" class="form-control" />
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        <div class="t-col col-3 form-group">
+            <div class="row">
+                <div class="col-12 white-text">
+                    ОГРН: <span class="red-text">*</span>
+                </div>
+                <div class="col-12">
+                    <div class="input-group input-group-icon">
+                        <i class="fas fa-pencil-alt input-group-text"></i>
+                        <input asp-for="OGRN" class="form-control" />
+                    </div>
+                </div>
             </div>
         </div>
         <div class="t-col col-3 form-group">
-            <div class="input-group input-group-icon">
-                <i class="fas fa-pencil-alt input-group-text"></i>
-                <input asp-for="OGRN" class="form-control" placeholder="ОГРН" />
-            </div>
-        </div>
-        <div class="t-col col-3 form-group">
-            <div class="input-group input-group-icon">
-                <i class="fas fa-pencil-alt input-group-text"></i>
-                <input asp-for="INN" class="form-control" placeholder="ИНН" />
+            <div class="row">
+                <div class="col-12 white-text">
+                    ИНН: <span class="red-text">*</span>
+                </div>
+                <div class="col-12 white-text">
+                    <div class="input-group input-group-icon">
+                        <i class="fas fa-pencil-alt input-group-text"></i>
+                        <input asp-for="INN" class="form-control" />
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -138,23 +190,23 @@
     <div class="row blank-row"></div>
     @*<div class="row">
         <div class="col-12 t-col" style="color: #fff;"><h3>Дополнительные документы</h3></div>
-    </div>
-    <div class="row blank-row"></div>
+        </div>
+        <div class="row blank-row"></div>
         <div class="row form-row">
         <div class="t-col col-6 form-group">
-            <div class="row">
-                <div class="t-col col-8">
-                    <input asp-for="LicenceFileId" readonly="readonly" class="form-control" placeholder="Скан лицензии на осуществление перевозок" />
-                </div>
-                <div class="t-col col-4">
-                    <input asp-for="LicenceFile" accept="image/*" />
-                </div>
-            </div>
+        <div class="row">
+        <div class="t-col col-8">
+        <input asp-for="LicenceFileId" readonly="readonly" class="form-control" placeholder="Скан лицензии на осуществление перевозок" />
+        </div>
+        <div class="t-col col-4">
+        <input asp-for="LicenceFile" accept="image/*" />
+        </div>
+        </div>
         </div>
         <div class="t-col col-6 form-group text-center">
-            <input asp-for="LogoFile" class="file" data-msg-placeholder="Логотип компании" data-browse-label="Загрузить" data-show-upload="false" data-show-remove="false" data-show-preview="false" />
+        <input asp-for="LogoFile" class="file" data-msg-placeholder="Логотип компании" data-browse-label="Загрузить" data-show-upload="false" data-show-remove="false" data-show-preview="false" />
         </div>
-    </div>*@
+        </div>*@
     <div class="row form-row">
         <div class="t-col col-12 chk-label form-group">
             <input id="Agreement" asp-for="Agreement" class="form-check-input" />
@@ -164,7 +216,7 @@
     <div class="row blank-row"></div>
     <div class="row form-row">
         <div class="t-col the-error col-10">
-            @if(!string.IsNullOrWhiteSpace(ViewBag.ErrorMsg))
+            @if (!string.IsNullOrWhiteSpace(ViewBag.ErrorMsg))
             {
                 <i class="fas fa-exclamation-triangle"></i> @ViewBag.ErrorMsg
             }
