--- a/Transfer.Web/wwwroot/css/Carrier/carrier-info.css
+++ b/Transfer.Web/wwwroot/css/Carrier/carrier-info.css
@@ -33,6 +33,7 @@
                 background-color: #ecbf54;
                 color: #000;
             }
+
             .assert-info .go a span,
             .carrier-info .go a span {
                 margin: auto;
@@ -104,4 +105,15 @@
     #CarrierAssetsSearch .new-assert-link:hover {
         background-color: #fff;
         border: solid 1px #007896;
+    }
+
+.assert-info .contacts a {
+    color: #007896;
+    text-decoration: none;
+    border-bottom: dashed 1px #007896;
+}
+
+    .assert-info .contacts a:hover {
+        color: #ecbf54;
+        border-bottom: none;
     }
