--- a/Transfer.Web/Views/Carrier/Assets.cshtml
+++ b/Transfer.Web/Views/Carrier/Assets.cshtml
@@ -76,6 +76,14 @@
                         <div class="col-12"><i class="fas fa-truck"></i> @c.TransportClass</div>
                     </div>
                 }
+                @if (!string.IsNullOrWhiteSpace(c.LicenseNumber))
+                {
+                    <div class="row blank-row"></div>
+                    <div class="row">
+                        <div class="col-12"><i class="far fa-address-card"></i> @c.LicenseNumber</div>
+                    </div>
+                }
+
                 @if (!string.IsNullOrWhiteSpace(c.Phone))
                 {
                     <div class="row blank-row"></div>
